--- a/styles.css
+++ b/styles.css
@@ -65,7 +65,7 @@
     color: #fff;
     text-align: center;
     position: relative;
-    background-image: url('img/swan.png'); /* Replace with your header background image */
+    background-image: url('img/swan.jpg'); /* Replace with your header background image */
   }
   
   .header h1 {
